--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
-    "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1",
+    "sitemap": "^8.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
